src/objects/ScrumServer__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>IsMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <label>Organization Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Scrum Server</label>
</CustomObject>